k8s/dev/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-mnpm
  namespace: sdyxmall
  labels:
    kubernetes.io/cluster-service: "true"
    kubernetes.io/name: "web-mnpm"
spec:
  ports:
    - name: registry
      port: 7001
      targetPort: 7001
    - name: web
      port: 7002
      targetPort: 7002
    # - name: http2
    #   port: 7002
    #   targetPort: 7002
#  externalIPs: 
#    - "192.168.1.210"
  selector:
    app: web-mnpm
